web-app-tls/k8s/manifests/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: spring-petclinic
