web-app-tls/k8s/manifests/app/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
  annotations:
    cert-manager.io/cluster-issuer: "k8s-test-issuer"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - spring-petclinic.k8s.test
  #     secretName: spring-petclinic-tls
  rules:
    - host: spring-petclinic.k8s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-petclinic
                port:
                  number: 80
